Update route changeUserInfo
